tools/namespaces/api/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/rev: asm-173-6
    last_mod: fguichard
  name: api
