tools/namespaces/api/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: api
