tools/namespaces/api/ingresses.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
  # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: api-ingress-nodeport
          servicePort: 5000
      - path: /data-logging
        backend:
          serviceName: data-logging
          servicePort: 5000
      - path: /nifi-trackers
        backend:
          serviceName: nifi-trackers
          servicePort: 5000
      - path: /serializer
        backend:
          serviceName: serializer
          servicePort: 5000
      - path: /*
        backend:
          serviceName: helloworld
          servicePort: 5000
